# lua_pix-script

./: CMakeLists.txt  ms-windows.cmd
clang-src/: embed_lua.c  sdl.c
executables/: app-pixlet.lua
executables/lua-scripts/: app-01.lua
lua-scripts/: algebra.lua  app-luajit.lua  app-pixlet.lua  app.lua  common.lua  loader.lua  main.lua
utility-depends/: alternatives.txt  website.txt
